--- a/frontend/index.html
+++ b/frontend/index.html
@@ -595,6 +595,34 @@
             pointer-events: none;
         }
 
+        /* Boss Warning UI */
+        #boss-warning {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #ff3333;
+            font-size: 48px;
+            font-weight: bold;
+            text-shadow: 0 0 10px #ff0000;
+            display: none;
+            z-index: 100;
+            text-align: center;
+            animation: warningPulse 1s infinite alternate;
+        }
+
+        @keyframes warningPulse {
+            from {
+                opacity: 0.6;
+                transform: translate(-50%, -50%) scale(1);
+            }
+
+            to {
+                opacity: 1;
+                transform: translate(-50%, -50%) scale(1.1);
+            }
+        }
+
         /* Loading Screen */
         #loading-screen {
             position: fixed;
@@ -1475,6 +1503,10 @@
     <div id="game-container">
         <!-- UI Overlay -->
         <div id="ui-overlay">
+            <!-- Boss Warning -->
+            <div id="boss-warning">⚠️ BOSS WARNING ⚠️<br><span style="font-size: 24px;">TIER 6 LEGENDARY DETECTED</span>
+            </div>
+
             <!-- Balance Display - Top Left -->
             <div id="balance-display">
                 <div class="balance-icon">$</div>
