--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1430,6 +1430,12 @@
         </div>
     </div>
 
+    <!-- ON-SCREEN DEBUGGER -->
+    <div id="debug-overlay"
+        style="position: fixed; top: 0; left: 0; width: 400px; height: 100%; background: rgba(0,0,0,0.5); color: #ff0000; font-family: monospace; font-size: 12px; z-index: 99999; pointer-events: none; overflow-y: scroll; white-space: pre-wrap;">
+        DEBUG LOG STARTED...
+    </div>
+
     <!-- Multiplayer Lobby -->
     <div id="multiplayer-lobby" style="display: none;">
         <div class="lobby-container">
